Bug 470274 - Firefox cannot visit any websites when waking from sleep.  r+sr=bz